package ip2.gameboard;

public class Brewery extends Property{

    public Brewery(String name, int price) {
        super(name, price);

    }
}
