package ip2.gameboard;

public class Chance extends Squares{
    public Chance(String name) {
        super(name);
    }
}
