package ip2.gameboard;

public class Jail extends Squares{
    public Jail(String name) {
        super(name);
    }
}
