package ip2.gameboard;

public class Parking extends Squares{
    public Parking(String name) {
        super(name);
    }
}
