package ip2.gameboard;

public class Ships extends Property{
    public Ships(String name, int price) {
        super(name, price);
    }
}
